--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -114,19 +114,11 @@
               </bootstrap-tooltip>
             </td>
           <td>
-              <span v-for="t in ec2.security_groups" track-by="$index">
-                <bootstrap-tooltip :title="t.group_name">
-                  <template slot="content">
-                    <a>{{t.group_id}}</a>
-                    <span v-if="$index < max_sec_group">,</span>
-                  </template>
-                </bootstrap-tooltip>
-              </span>
+            <button href="#view-rules-modal" @click="view_rules()" class="btn btn-xs btn-info" class="btn btn-xs dropdown-toggle" data-toggle="modal">
+              <%= glyphicon 'info-sign' %> <%= t 'infrastructures.btn.view_rules' %>
+            </button>
           </td>
           <td>
-              <button href="#view-rules-modal" @click="view_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
-                <%= glyphicon 'info-sign' %> <%= t 'infrastructures.btn.view_rules' %>
-              </button>
               <button href="#change-rules-modal" @click="get_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
                 Change Security Groups
               </button>
