--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -115,12 +115,12 @@
             </td>
           <td>
             <button href="#view-rules-modal" @click="view_rules()" class="btn btn-xs btn-info" class="btn btn-xs dropdown-toggle" data-toggle="modal">
-              <%= glyphicon 'info-sign' %> <%= t 'infrastructures.btn.view_rules' %>
+              <%= glyphicon 'info-sign' %> <%= t 'security_groups.btn.view_rules' %>
             </button>
           </td>
           <td>
               <button href="#change-rules-modal" @click="get_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
-                Change Security Groups
+                <%= t 'security_groups.btn.change_groups' %>
               </button>
           </td>
         </tr>
