--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
-<h4>Security Groups associated with #{{physical_id}}</h4>
+<h4> #{{physical_id}}</h4>
 
 <div class="row">
   <div class="span*">
@@ -7,21 +7,21 @@
       <thead>
       <!--Top headers-->
       <tr>
-        <th rowspan="2">Description</th>
-        <th rowspan="2">Group ID</th>
-        <th class="text-center" colspan="3">Inbound</th>
-        <th class="text-center" colspan="3">Outbound</th>
+        <th rowspan="2"><%= t 'security_groups.description' %></th>
+        <th rowspan="2"><%= t 'security_groups.group_id' %></th>
+        <th class="text-center" colspan="3"><%= t 'security_groups.inbound' %></th>
+        <th class="text-center" colspan="3"><%= t 'security_groups.outbound' %></th>
       </tr>
       <!--For inbound and outbound subheaders-->
       <tr>
         <!--<th>Type</th>-->
-        <th>Protocol</th>
-        <th>Port Range</th>
-        <th>Source</th>
+        <th><%= t 'security_groups.protocol' %></th>
+        <th><%= t 'security_groups.port_range' %></th>
+        <th><%= t 'security_groups.source' %></th>
         <!--<th>Type</th>-->
-        <th>Protocol</th>
-        <th>Port Range</th>
-        <th>Source</th>
+        <th><%= t 'security_groups.protocol' %></th>
+        <th><%= t 'security_groups.port_range' %></th>
+        <th><%= t 'security_groups.source' %></th>
       </tr>
       </thead>
       <!--Contents-->
