--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -9,19 +9,21 @@
       <tr>
         <th rowspan="2"><%= t 'security_groups.description' %></th>
         <th rowspan="2"><%= t 'security_groups.group_id' %></th>
-        <th class="text-center" colspan="3"><%= t 'security_groups.inbound' %></th>
-        <th class="text-center" colspan="3"><%= t 'security_groups.outbound' %></th>
+        <th class="text-center" colspan="4"><%= t 'security_groups.inbound' %></th>
+        <th class="text-center" colspan="4"><%= t 'security_groups.outbound' %></th>
       </tr>
       <!--For inbound and outbound subheaders-->
       <tr>
         <!--<th>Type</th>-->
+        <th><%= t 'security_groups.type' %></th>
         <th><%= t 'security_groups.protocol' %></th>
         <th><%= t 'security_groups.port_range' %></th>
         <th><%= t 'security_groups.source' %></th>
         <!--<th>Type</th>-->
+        <th><%= t 'security_groups.type' %></th>
         <th><%= t 'security_groups.protocol' %></th>
         <th><%= t 'security_groups.port_range' %></th>
-        <th><%= t 'security_groups.source' %></th>
+        <th><%= t 'security_groups.destination' %></th>
       </tr>
       </thead>
       <!--Contents-->
@@ -40,6 +42,7 @@
               <template v-if="index == 0">
                 <!--First inbound-->
                 <tr>
+                  <td>{{inbound.user_id_group_pairs}}</td>
                   <td>{{inbound.ip_protocol}}</td>
                   <td v-if="inbound.from_port === inbound.to_port">{{inbound.from_port}}</td>
                   <td v-else>{{inbound.from_port}}-{{inbound.to_port}}</td>
@@ -47,6 +50,7 @@
                 <td v-for="s in inbound.ip_ranges">{{s.cidr_ip}}</td>
                 <!--First Outbound-->
                 <template v-for="outbound in rule.ip_permissions_egress" track-by="$index">
+                  <td v-if="$index == 0">{{outbound.user_id_group_pairs}}</td>
                   <td v-if="$index == 0">
                     <span v-if="outbound.ip_protocol === '-1'">
                       All
@@ -75,6 +79,7 @@
               <template v-else>
                 <!--next inbound-->
                 <tr>
+                  <td>{{inbound.user_id_group_pairs}}</td>
                   <td>{{inbound.ip_protocol}}</td>
                   <td v-if="inbound.from_port === inbound.to_port">
                       <span v-if="inbound.from_port === -1">
@@ -89,6 +94,7 @@
                   <td v-for="s in inbound.ip_ranges">{{s.cidr_ip}}</td>
                   <!--First Outbound-->
                   <template v-if="index < rule.ip_permissions_egress.length">
+                    <td v-cloak="index === 0">{{rule.ip_permissions_egress[index].user_id_group_pairs}}</td>
                     <td v-cloak="index === 0">
                       <span v-if="rule.ip_permissions_egress[index].ip_protocol === '-1'">
                         All
@@ -122,6 +128,7 @@
                 <tr>
                   <!--First Outbound-->
                   <template v-for="inbound in rule.ip_permissions" track-by="$index">
+                    <td v-if="$index == 0">{{inbound.user_id_group_pairs}}</td>
                     <td v-if="$index == 0">{{inbound.ip_protocol}}</td>
                     <td v-if="$index == 0">
                       <span v-if="inbound.from_port === inbound.to_port">
@@ -138,7 +145,7 @@
                     </td>
                     <td v-if="$index == 0">{{inbound.ip_ranges[0].cidr_ip}}</td>
                   </template>
-
+                  <td>{{outbound.user_id_group_pairs}}</td>
                   <td>
                     <span v-if="outbound.ip_protocol === '-1'">
                       All
@@ -165,6 +172,7 @@
                 <!--next inbound-->
                 <tr>
                   <template v-if="index < rule.ip_permissions.length">
+                    <td v-cloak="index === 0">{{rule.ip_permissions[index].user_id_group_pairs}}</td>
                     <td v-cloak="index === 0">{{rule.ip_permissions[index].ip_protocol}}</td>
                     <td v-cloak="index === 0">
                       <span v-if="rule.ip_permissions[index].from_port === rule.ip_permissions[index].to_port">
