--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -1,5 +1,6 @@
 <div class="content">
-<h4> #{{physical_id}}</h4>
+<h4 v-if="lang === 'en'"> <%= t'security_groups.associated' %> {{physical_id}}</h4>
+<h4 v-if="lang === 'ja'">{{physical_id}} <%= t'security_groups.associated' %> </h4>
 
 <div class="row">
   <div class="span*">
