--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -186,8 +186,22 @@
                     <td>-</td><td>-</td><td>-</td><td>-</td>
                   </template>
                   <td>{{outbound.user_id_group_pairs}}</td>
-                  <td>{{outbound.ip_protocol}}</td>
-                  <td v-if="outbound.from_port === outbound.to_port">{{outbound.from_port}}</td>
+                  <td>
+                    <span v-if="outbound.ip_protocol === '-1'">
+                      All
+                    </span>
+                    <span v-else>
+                      {{outbound.ip_protocol}}
+                    </span>
+                  </td>
+                  <td v-if="outbound.from_port === outbound.to_port">
+                    <span v-if="!outbound.from_port">
+                        All
+                      </span>
+                      <span v-else>
+                        {{outbound.from_port}}
+                      </span>
+                  </td>
                   <td v-else>{{outbound.from_port}}-{{outbound.to_port}}</td>
                   <!--Source IP-->
                   <td v-for="s in outbound.ip_ranges">{{s.cidr_ip}}</td>
