--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, I18n.t('serverspecs.generator.title')) %>
-<div class="container" id="main" v-cloak>
+<div class="container">
   <h2 class="page-header">
     <%=t('serverspecs.generator.title')%>
     <% if @infra %>
@@ -10,6 +10,7 @@
   <div id="vue-serverspec-gen"></div>
 
   <div class="row form-actions-top">
+    TODO
     <button class="btn btn-primary" @click="save()"><%=t('helpers.titles.save')%></button>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
       serverspecs_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
