get security groups from backend and return as JSON

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -119,7 +119,7 @@
             </button>
           </td>
           <td>
-              <button href="#change-rules-modal" @click="get_rules()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
+              <button href="#change-rules-modal" @click="get_security_groups()" class="btn btn-xs btn-default" class="btn btn-xs dropdown-toggle" data-toggle="modal">
                 <%= t 'security_groups.btn.change_groups' %>
               </button>
           </td>
