--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -16,8 +16,9 @@
           <tr>
             <th width="20"></th>
             <th width="100">Security Group ID</th>
-            <th>Name</th>
+            <th>Security Group Name</th>
             <th>Description</th>
+            <th>Name Tag</th>
           </tr>
           </thead>
           <tbody>
@@ -26,6 +27,8 @@
             <td>{{r.group_id}}</td>
             <td><div class="truncate"> {{r.group_name}}</div></td>
             <td><div class="truncate">{{r.description}}</div></td>
+            <td v-if="r.tags[0].key === 'Name'">{{r.tags[0].value}}</td>
+            <td v-else></td>
           </tr>
           </tbody>
         </table>
@@ -34,7 +37,7 @@
       <div class="modal-footer">
         <div v-if="!loading_s">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
-          <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Assign Security Groups</button>
+          <button class="btn btn-primary" @click="submit_groups()" :disabled="!has_selected" data-dismiss="modal" aria-hidden="true" data-dismiss="{{has_selected ? 'modal' : ''}}">Assign Security Groups</button>
         </div>
         <div-loader v-if="loading_s"></div-loader>
       </div>
