--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -2,7 +2,7 @@
 <div id="change-rules-modal" class="modal fade" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
-
+      <div-loader v-if="loading_groups"></div-loader>
       <div class="modal-header bg-info">
         <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" v-if="lang === 'en'"> <%= t'security_groups.associated' %> {{physical_id}}</h4>
