--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -9,7 +9,8 @@
         <h4 class="modal-title" v-if="lang === 'ja'">{{physical_id}} <%= t'security_groups.associated' %> </h4>
       </div>
 
-      <div class="modal-body">
+      <div class="modal-body" v-if="!loading_groups">
+
 
         <table class="table table-condensed">
           <thead>
@@ -33,6 +34,10 @@
           </tbody>
         </table>
 
+        <div v-if="!has_selected" class="alert alert-dismissible alert-danger">
+          <h4><%= t 'security_groups.msg.error' %></h4>
+          <p><%= t 'security_groups.msg.error_msg' %></p>
+        </div>
       </div>
       <div class="modal-footer">
         <div v-if="!loading_s">
