--- a/app/views/infrastructures/modal/_create_security_group_modal.html.erb
+++ b/app/views/infrastructures/modal/_create_security_group_modal.html.erb
@@ -1,5 +1,6 @@
 <%# modal for change schedule %>
-<div id="create_security_group_modal" class="modal fade" role="dialog" aria-hidden="true">
+<div id="create_security_group_modal" class="modal fade" role="dialog" aria-hidden="true"
+     xmlns:v-bind="http://www.w3.org/1999/xhtml">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header bg-primary">
@@ -40,6 +41,13 @@
                 <th>Range</th>
                 <th>Source</th>
               </tr>
+              <tr>
+                <td>
+                  <select class="form-control">
+                    <option v-for="t in types">{{t}}</option>
+                  </select>
+                </td>
+              </tr>
             </table>
             <button class="btn btn-xs btn-default">Add rule</button>
           </div>
@@ -60,7 +68,7 @@
       <div class="modal-footer">
         <div v-if="!loading_s">
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
-          <button @click="detach_ec2()" data-dismiss="modal" class="btn btn-warning"><%= t('helpers.links.detach') %></button>
+          <button @click="create_group()" data-dismiss="modal" class="btn btn-primary"><%= t('helpers.links.create') %></button>
         </div>
         <div-loader v-if="loading_s"></div-loader>
       </div>
