created security groups.json and hover button for table

--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -234,3 +234,17 @@ textarea:focus:invalid {
   text-overflow: ellipsis;
 }
 
+/* CSS used here will be applied after bootstrap.css */
+.tb-row {
+  position: relative;
+}
+
+.hover-btn {
+  position: absolute;
+  left: 20px;
+  display: none;
+}
+
+.tb-row:hover .hover-btn {
+  display: block;
+}
