--- a/app/views/vue/_security_groups_tabpane.html.erb
+++ b/app/views/vue/_security_groups_tabpane.html.erb
@@ -1,6 +1,6 @@
-<h4> List of all Security Groups
+<h4> <%= t 'security_groups.list_all' %>
   <small>
-    <a href="#create_security_group_modal" data-toggle="modal" class="btn btn-primary">Create Security Group</a>
+    <a href="#create_security_group_modal" data-toggle="modal" class="btn btn-primary"><%= t 'security_groups.btn.create' %></a>
   </small>
 </h4>
 
