--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -38,7 +38,7 @@
             <a href="#" tabindex="-1" @click="show_event_logs()"><%= t 'infrastructures.btn.stack_eventlog' %></a>
           </li>
           <li :class="{disabled : no_stack}">
-            <a href="#" tabindex="-1" @click="show_sec_groups()"><%= t 'infrastructures.btn.security_groups' %></a>
+            <a href="#" tabindex="-1" @click="show_sec_groups()"><%= t 'security_groups.btn.security_groups' %></a>
           </li>
           <li class="divider"></li>
           <li :class="{disabled : no_stack}">
