--- a/app/views/infrastructures/modal/_create_security_group_modal.html.erb
+++ b/app/views/infrastructures/modal/_create_security_group_modal.html.erb
@@ -5,15 +5,15 @@
     <div class="modal-content">
       <div class="modal-header bg-primary">
         <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="panel-title">Create Security Group</h4>
+        <h4 class="panel-title"><%= t 'security_groups.btn.create' %></h4>
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label class="control-label">Security Group Name</label>
+          <label class="control-label"><%= t 'security_groups.group_name' %></label>
           <input class="form-control" type="text" v-model="group_name" required>
         </div>
         <div class="form-group">
-          <label class="control-label">Description</label>
+          <label class="control-label"><%= t 'security_groups.description' %></label>
           <input class="form-control" type="text" v-model="description" required>
         </div>
         <div class="form-group">
@@ -25,7 +25,7 @@
           <select class="form-control" v-model="vpc" required>
             <option v-for="v in vpcs" v-bind:value="v.vpc_id">{{v.name}}</option>
           </select>
-          * denotes default VPC
+          <%= t 'security_groups.denotes' %>
         </div>
 
         <!--<div class="form-group">-->
