--- a/app/views/infrastructures/_security_groups_table.html.erb
+++ b/app/views/infrastructures/_security_groups_table.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span*">
+  <div class="span">
     <table class="table table-bordered text-center">
       <thead>
       <!--Top headers-->
