move route member to collection and fix required params

--- a/app/views/infrastructures/modal/_create_security_group_modal.html.erb
+++ b/app/views/infrastructures/modal/_create_security_group_modal.html.erb
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
           <label class="control-label">Name</label>
-          <input class="form-control" type="text" v-model="name">
+          <input class="form-control" type="text" v-model="name" required>
         </div>
         <div class="form-group">
           <label class="control-label">VPC</label>
